# SokoForge

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml
crates/sokoforge-cli/: Cargo.toml
crates/sokoforge-cli/src/: main.rs
crates/sokoforge-core/: Cargo.toml
crates/sokoforge-core/src/: lib.rs
crates/sokoforge-wasm/: Cargo.toml
crates/sokoforge-wasm/src/: lib.rs
scripts/: assemble-expert-pack.mjs
web/: index.html  package.json  playwright.config.ts  vite.config.ts
web/e2e/: workbench.spec.ts
web/public/levels/: blocked-center.xsb  cross-lock.xsb  expert-pack.json  false-parking.xsb  five-crate-knot.xsb  forced-exchange.xsb  goal-detour.xsb  hidden-order.xsb  index.json  narrow-relay.xsb  narrow-turn.xsb  open-corner.xsb  parking-space.xsb  reverse-logic.xsb  split-route.xsb  two-crates.xsb  warehouse-lanes.xsb
web/public/wasm/: package.json  sokoforge_wasm.d.ts  sokoforge_wasm.js  sokoforge_wasm_bg.wasm  sokoforge_wasm_bg.wasm.d.ts
web/src/: App.tsx  i18n.ts  level.test.ts  level.ts  levelDirectory.ts  packFiles.test.ts  packFiles.ts  solver.worker.ts  styles.css  types.ts
