[workspace]
members = [
  "crates/sokoforge-core",
  "crates/sokoforge-cli",
  "crates/sokoforge-wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["SokoForge contributors"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rand = "0.9"
getrandom = { version = "0.3", features = ["wasm_js"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
js-sys = "0.3"
wasm-bindgen = "0.2"
